--- a/style.css
+++ b/style.css
@@ -6,5 +6,14 @@ nav{
     text-align: center;
     flex-direction: row;
     justify-content: space-around;
-
+}
+.ancre a{
+   
+    color: white;
+    text-decoration: none;
+}
+.ancre{
+    display: flex;
+    gap:2vw;
+    font-weight: bold;
 }
