--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
+body{
+    font-family:Lato;
+}
+p{
+    margin: 0;
+    padding: 0;
+    margin-bottom: 4vh;
+}
+h1{
+ margin-top:2vh;
+ margin-bottom: 1vh;
+
+}
+
 
 nav{
     background-color: #2C3E50;
@@ -33,12 +47,21 @@ header{
     height: 30vh;
     width: 20vw;
     margin-top: 10vh;
+    margin-bottom: 0;
+    padding-bottom: 0;
 }
 .renom{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-top: 0;
     margin-bottom: 8vh;
+    
 }
 .h1{
-    margin-top: 0;
+    margin-top: 3vh;
+    margin: 0;  
     padding: 0;
+    font-size: 2vw;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
