--- a/style.css
+++ b/style.css
@@ -65,3 +65,29 @@ header{
     font-size: 2vw;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+#portfolio{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 10px;
+    width: 90%;
+}
+.p-titre{
+    display: flex;
+    justify-content: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 1.563rem;
+    font-weight: bold;
+}
+
+.images img{
+
+    height: 20vh;
+    width: 20vw;
+    border-radius: 10px;
+   
+    
+}
