--- a/style.css
+++ b/style.css
@@ -4,11 +4,12 @@ body{
 p{
     margin: 0;
     padding: 0;
-    margin-bottom: 4vh;
+
 }
 h1{
  margin-top:2vh;
  margin-bottom: 1vh;
+ font-family: Montserrat
 
 }
 
@@ -31,6 +32,7 @@ nav{
     display: flex;
     gap:2vw;
     font-weight: bold;
+    align-items: center;
 }
 header{
     display: flex;
@@ -73,7 +75,7 @@ header{
     flex-direction: row;
     flex-wrap: wrap;
     gap: 10px;
-    width: 90%;
+    
 }
 .p-titre{
     display: flex;
@@ -82,12 +84,25 @@ header{
     font-size: 1.563rem;
     font-weight: bold;
 }
-
+.images{
+    padding-left: 20vw;
+    padding-right: 20vw;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 35px;
+    padding-top: 0;
+    margin-top: 0;
+}
 .images img{
-
-    height: 20vh;
-    width: 20vw;
+  
+    height: 15vh;
+    width: 15vw;
     border-radius: 10px;
    
     
+}
+h2{
+    margin-bottom: 0;
+    font-family: Montserrat
 }
