--- a/style.css
+++ b/style.css
@@ -143,3 +143,60 @@ h2{
     line-height: 1.5;
 
 }
+#contact{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
+    padding-left: 20vw;
+    padding-right: 20vw;
+    text-align: center;
+}
+
+
+.contact{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    text-align: start;
+
+}
+input{
+    border: none;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.171);
+    margin-bottom: 2vh;
+    margin-top: 2vh;
+}
+input::placeholder{
+    color: rgba(128, 128, 128, 0.733);
+}
+textarea{
+    border: none;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.171);
+    
+}
+textarea::placeholder{
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgba(128, 128, 128, 0.733);
+}
+input{
+    width: 25vw;
+    padding-bottom: 2vh;
+}
+.btn{
+    background-color: #d73d3d;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 14px;
+    font-family: Arial, sans-serif;
+    width: 4vw;
+    height: 5vh;
+}
+textarea{
+    width: 25vw;
+
+}
